galley/pkg/config/analysis/analyzers/testdata/gateway-secrets.yaml
apiVersion: v1
data:
  cert: aHVzaCBodXNoIGh1c2gK
  key: c2VjcmV0IHNlY3JldAo=
kind: Secret
metadata:
  name: httpbin-credential
  namespace: istio-system
type: Opaque
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway-noerrors
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "httpbin-credential" # Correct credential, should not produce an error message
    hosts:
    - "httpbin.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway-bogusCredentialName
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 4430
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "httpbin-credential-bogus" # Should break, wrong credential name
    hosts:
    - "httpbin.example.com"
